--- a/playbook.yml
+++ b/playbook.yml
@@ -1,25 +1,13 @@
 ---
-- hosts: webserver1
-  vars_files:
-    - config.yml
-  tasks:
-    - name: include node
-      include_role:
-        name: nodejs
-      vars:
-        node_version: "{{node_version_webserver1}}"
-    - name: include nginx
-      include_role:
-        name: nginx
+  - hosts: webserver1
+    vars_files:
+      - webserver1.yml
+    roles:
+      - nodejs
+      - nginx
 
-
-- hosts: webserver2
-  vars_files:
-    - config.yml
-  tasks:
-  - name: include node
-    become: yes
-    include_role:
-      name: nodejs
-    vars:
-      node_version: "{{node_version_webserver2}}"
+  - hosts: webserver2
+    vars_files:
+      - webserver2.yml
+    roles:
+      - nodejs
