--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -7,4 +7,5 @@
    gpgcheck: no
 
 - name: install node
-  yum: name="nodejs-{{node_version}}" state=present
+  yum: name=nodejs-{{node_version}} state=present
+  become: yes
