--- a/roles/nginx/files/nginx.conf
+++ b/roles/nginx/files/nginx.conf
@@ -3,8 +3,8 @@
 #
 
 server {
-    listen       2000 default_server;
-    listen       [::]:80 default_server;
+    listen       {{nginx_port}} default_server;
+    listen       [::]:{{nginx_port}} default_server;
     server_name  _;
     root         /usr/share/nginx/html;
 
