--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,2 +1,8 @@
+- name : copy nginx configs to 2000
+  become: yes
+  template:
+    src: nginx.conf
+    dest: /etc/nginx/conf.d/default.conf
+
 - name: install nginx
   yum: name="nginx" state=latest
