--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,8 +1,21 @@
+- name: install nginx
+  become: yes
+  yum: name=nginx
+     state=latest
+  notify: Restart nginx
+
 - name : copy nginx configs to {{nginx_port}}
   become: yes
   template:
     src: nginx.conf
     dest: /etc/nginx/conf.d/default.conf
+  notify: Restart nginx
 
-- name: install nginx
-  yum: name="nginx" state=latest
+
+
+- name: start nginx
+  become: yes
+  service:
+    name: nginx
+    state: started
+    enabled: yes
