--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -3,6 +3,7 @@
   yum: name=nginx
      state=latest
   notify: Restart nginx
+  # - meta : flush_handlers
 
 - name : copy nginx configs to {{nginx_port}}
   become: yes
@@ -10,6 +11,7 @@
     src: nginx.conf
     dest: /etc/nginx/conf.d/default.conf
   notify: Restart nginx
+- meta : flush_handlers
 
 
 
