--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -2,22 +2,33 @@
   become: yes
   yum: name=nginx
      state=latest
-  notify: Restart nginx
-  # - meta : flush_handlers
 
-- name : copy nginx configs to {{nginx_port}}
+- name : copy and change nginx configs to {{nginx_port}}
   become: yes
   template:
     src: nginx.conf
     dest: /etc/nginx/conf.d/default.conf
-  notify: Restart nginx
-- meta : flush_handlers
+  register: IsAnyChangeInFile
 
+- name: debug
+  become: yes
+  debug: msg={{IsAnyChangeInFile}}
 
+- name: Restart nginx
+  become: yes
+  service:
+    name: nginx
+    state: restarted
+    enabled: yes
+  when: IsAnyChangeInFile.changed
 
-- name: start nginx
+# - shell: cat /etc/nginx/conf.d/default.conf
+#   register: changed_value
+
+- name: start nginx {{IsAnyChangeInFile}}
   become: yes
   service:
     name: nginx
     state: started
     enabled: yes
+  when: IsAnyChangeInFile.changed
