--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -8,11 +8,11 @@
   template:
     src: nginx.conf
     dest: /etc/nginx/conf.d/default.conf
-  register: IsAnyChangeInFile
+  register: nginx_config_changed_result
 
 - name: debug
   become: yes
-  debug: msg={{IsAnyChangeInFile}}
+  debug: msg={{nginx_config_changed_result}}
 
 - name: Restart nginx
   become: yes
@@ -20,15 +20,15 @@
     name: nginx
     state: restarted
     enabled: yes
-  when: IsAnyChangeInFile.changed
+  when: nginx_config_changed_result.changed
 
 # - shell: cat /etc/nginx/conf.d/default.conf
 #   register: changed_value
 
-- name: start nginx {{IsAnyChangeInFile}}
+- name: start nginx {{nginx_config_changed_result}}
   become: yes
   service:
     name: nginx
     state: started
     enabled: yes
-  when: IsAnyChangeInFile.changed
+  when: nginx_config_changed_result.changed
