--- a/playbook.yml
+++ b/playbook.yml
@@ -3,11 +3,10 @@
     vars_files:
       - ./configs/webserver1.yml
     roles:
-      - nodejs
-      - nginx
+      - webserver1
 
   - hosts: webserver2
     vars_files:
       - ./configs/webserver2.yml
     roles:
-      - nodejs
+      - webserver2
